--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/xZio/express-mesto-gha.git"
   },
-  "author": "",
+  "author": "botanov-a",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/xZio/express-mesto-gha/issues"
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.4.5"
   }
