--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.5",
+    "validator": "^13.7.0"
   }
 }
