--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
     "express": "^4.18.1",
+    "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.5",
     "validator": "^13.7.0"
