--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "lint": "npx eslint ."
   },
   "repository": {
